08/02/2005 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* annotate-two/Makefile.in: Ditto.
	* annotate-two/src/Makefile.in: Ditto.
	* gdbmi/Makefile.in: Ditto.
	* gdbmi/src/Makefile.in: Ditto.
	* tgdb-base/Makefile.in: Ditto.
	* tgdb-base/src/Makefile.in: Autogenerated.

08/02/2005 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* annotate-two/Makefile.in: Ditto.
	* annotate-two/src/Makefile.in: Ditto.
	* gdbmi/Makefile.in: Ditto.
	* gdbmi/src/Makefile.in: Ditto.
	* tgdb-base/Makefile.in: Ditto.
	* tgdb-base/src/Makefile.am (tgdb_driver_LDADD): Undo 
	USE_PACKAGED_READLINE change.
	* tgdb-base/src/Makefile.in: Autogenerated.

07/26/2005 Marcel Lanz <marcel.lanz@ds9.ch>

	* a2-tgdb.c (a2_client_modify_breakpoint): Add TGDB_TBREAKPOINT_ADD
	case.
	* tgdb_types.h (tgdb_breakpoint_action): Add TGDB_TBREAKPOINT_ADD
	enumeration value.

07/13/2005 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* annotate-two/Makefile.in: Ditto.
	* annotate-two/src/Makefile.in: Ditto.
	* gdbmi/Makefile.in: Ditto.
	* gdbmi/src/Makefile.in: Ditto.
	* tgdb-base/Makefile.in: Ditto.
	* tgdb-base/src/Makefile.am (tgdb_driver_LDADD): If 
	USE_PACKAGED_READLINE is set add internal readline libraries.
	* tgdb-base/src/Makefile.in: Autogenerated.

05/26/2005 Bob Rossi <bob@brasko.net>

	* tgdb.h: Add vim folding markers.

05/26/2005 Bob Rossi <bob@brasko.net>

	* tgdb.c (tgdb_recv_debugger_data): Change buf_size from ssize_t to 
	size_t to fix compiler warning on OSX.

version 0.5.2 (05/21/2005):

05/21/2005 Bob Rossi <bob@brasko.net>

	* annotate-two/src/Makefile.am (libannotate_two_a_DEPENDENCIES): Changed
	top_srcdir to top_builddir.
	* annotate-two/src/Makefile.in: Autogenerated.
	* gdbmi/src/Makefile.am (libgdbmi_a_DEPENDENCIES): Changed top_srcdir to
	top_builddir.
	* gdbmi/src/Makefile.in: Autogenerated.
	* tgdb-base/src/Makefile.am (noinst_bin_PROGRAMS): Removed tgdb_driver.
	(noinst_bindir): Removed.
	(noinst_PROGRAMS): Added tgdb_driver.