@@ -1,3 +1,10 @@
+08/03/2005 Bob Rossi <bob@brasko.net>
+
+	* annotate-two/src/commands.c (commands_create_command): Take const
+	qualifier off return value.  Recomment function.
+	(commands_issue_command): Update variable to reflect signature change
+	of function above.  Free ncom variable, fix memory leak.
+
 08/02/2005 Bob Rossi <bob@brasko.net>
 
 	* Makefile.in: Autogenerated.
